# Support-Vector-Machine

./: CMakeLists.txt  Kernels.hpp  README.md  SVM.py  Sequential_minimal_optimization.cpp  Sequential_minimal_optimization.hpp  Support_vector_machine.cpp  Support_vector_machine.hpp
include/: Kernels.hpp  Sequential_minimal_optimization.hpp  Support_vector_machine.hpp  Vectors.hpp
src/: Kernels.cpp  SVM_PythonInterface.cpp  Sequential_minimal_optimization.cpp  Support_vector_machine.cpp  UnitTests.cpp  Vectors.cpp
